--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:">
 
 		<meta charset="utf-8">
-		<title>Electron boilerplate</title>
+		<title>All In One Desktop App</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
 		<div class="container">
 			<header>
-				<h1>Electron boilerplate</h1>
+				<h1>All In One Desktop App</h1>
 				<p></p>
 			</header>
 			<section class="main"></section>
