Added prettier+eslint support and removed xo support
Re iterated whole codebase

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html>
-	<head>
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:">
+  <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+    />
 
-		<meta charset="utf-8">
-		<title>All In One Desktop App</title>
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-		<div class="container">
-			<header>
-				<h1>All In One Desktop App</h1>
-				<p></p>
-			</header>
-			<section class="main"></section>
-			<footer></footer>
-		</div>
-	</body>
+    <meta charset="utf-8" />
+    <title>All In One Desktop App</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>All In One Desktop App</h1>
+        <p></p>
+      </header>
+      <section class="main"></section>
+      <footer></footer>
+    </div>
+  </body>
 </html>
