Successfully created windows package (.exe)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <footer></footer>
     </div>
 
-    <script src="./node_modules/i18next/index.js"></script>
-    <script src="./renderer.js"></script>
+    <script type="module" src="./renderer.js"></script>
   </body>
 </html>
